# RAGCapitalPlugin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: start.sh
docs/: architecture.md  dokploy_deploy.md  ingest_examples.md  reference_design_v0.1.md  technical_tutorial.md  workflow_tutorial.md
eval/: tasks_seed.json
sample/plugin/api/: AttributeList.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
sample/plugin/examples/: build.xml
sample/webservice/data/: BatchBridgeInTask_paramWithAttachments.xml  BatchBridgeInTask_paramWithFilePath.xml  BridgesTestConfigurations.xml  DRCProcessingTask.xml  DesignsCEAExportConfiguration.xml  DesignsCEAImportConfiguration.xml  HarnessProcessingTask.xml  ImportBuildListsWebServiceSampleRequest.xml  LibraryCEAExportConfiguration.xml  LibraryCEAImportConfiguration.xml  PDFParams.xml  ReleaseDesignsTask.xml  ReleaseMultipleDesignsProject.xml  SBOMProcessingTask.xml  SymbolLibraryCEAExportConfiguration.xml  SymbolLibraryCEAImportConfiguration.xml  design_HarnessDesign12.xml  eco_web_service_import_example1.xml  library_example1.xml  library_web_service_import_example2.xml  project_example1.xml  project_example2.xml  (+4 more)
scripts/: raglocal.py
src/rag_codegen/: app.py  config.py  evaluate.py  generate.py  ingest.py  llm.py  metrics.py  prompts.py  retrieve.py  schemas.py  storage.py  text_utils.py  webui.py
(+1118 files in other folders)
