[project]
name = "raglocal-plugin-codegen"
version = "0.1.0"
description = "Local-first RAG prototype for action/drc/constraint plugin code generation"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "numpy>=1.26.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
]

[tool.uv]
package = false
